--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ body h2 {
     font-size: 44px;
     font-weight: 700;
     line-height: 60px;
-    letter-spacing: 6%;
+    letter-spacing: 3px;
 }
 
 
@@ -198,6 +198,7 @@ body h2 {
     font-style: inherit;
     font-size: 16px;
     font-weight: 700;
+    letter-spacing: 2px;
     cursor: pointer;
     margin-top: 30px;
     padding: 10px 20px;
@@ -532,8 +533,8 @@ padding-top: 94px;
     padding: 6px 22px;
     border: var(--buttons-color);
     border-radius: 4px;
-    box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12); */
 }
 
 .portofolio-buttons button:link,
@@ -546,7 +547,10 @@ padding-top: 94px;
     color: #fff;
     background-color: var(--visited-link-color);
     cursor: pointer;
-}
+    box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    }
+
 
 .portofolio-buttons button:active {
     color: #fff;
@@ -556,7 +560,7 @@ padding-top: 94px;
 .portofolio-buttons button:focus {
     color: #fff;
     background-color: var(--visited-link-color);
-}
+    }
 
 .portofolio-content {
     background-color: #fff;
@@ -611,6 +615,7 @@ padding-top: 94px;
     padding-left: 24px;
 }
 
+.portofolio-cards:focus,
 .portofolio-cards:hover {
     cursor: pointer;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2),
